--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -510,7 +510,7 @@ body.plantshare {
         #category-nav {
             p {
                 float: left;
-                margin: 2px 0 0;
+                margin: 0;
             }
             ul {
                 margin-left: 80px;
